tests/unit/default/syntax-error/017-create-table-parens-name.e.t
---- IN ----
+%table(id
---- OUT ----
---- ERR ----
syntax: expected `:` after `+%table(id` instead of EOL at position 10 - at line 1
---- EXIT ----
1
